<resources>
    <string name="about_key_summary">© 2016 MIUI Tools | Powered by Xs | Edit by GaHoKwan</string>

    <string name="app_name">Extra Settings</string>
    <string name="camera_sound_title">Camera Sound</string>
    <string name="camera_sound_summary_off">Off</string>
    <string name="camera_sound_summary_on">On</string>
    <string name="warning_title">Warning!</string>
    <string name="warning_summary">Shutter sound is compulsory in some regions.\nPlease abide strictly by the laws, rules and regulations of your area.</string>
    <string name="double_tap_home_to_sleep_title">Double tap home to sleep</string>
    <string name="boeffla_settings_title">Boeffla Kernel Settings</string>
    <string name="camera_switch_title">Camera Switch</string>
    <string name="about_title">About</string>
    <string name="camera_switch_google_summary">Google Camera</string>
    <string name="camera_switch_nubia_summary">Nubia Camera</string>
    <string name="camera_switch_miui_summary">MIUI Camera</string>
    <string name="camera_switch_cm_summary">CM Camera</string>
    <string name="home_layout_switch_title">Home Layout Switch</string>
    <string name="home_layout_switch_summary_4x5">4x5</string>
    <string name="home_layout_switch_summary_4x6">4x6</string>
    <string name="home_layout_switch_summary_5x5">5x5</string>
    <string name="density_title">Screen DPI</string>
    <string name="density_error">Warning:Input Error!</string>
    <string name="density_edit_title">Adjust the DPI specified</string>
    <string name="density_edit_message">please enter a reasonable range of values(%1$s)\nThis operation may lead to frequent system FC, careful revision</string>
    <string name="density_summary">Now dpi is%1$s , Default is%2$s</string>
    <string name="dialog_ok">Done!Are you sure want to reboot the phone?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_reboot">Please restart your mobile phone manually in some time later</string>
    <string name="donate_link">https://qr.alipay.com/9972778039134201</string>
    <string name="donate_summary">If you like my work in making this ROM, you are welcome to treat me some coke:)</string>
    <string name="donate_title">Treat Me Coke</string>
    <string name="find_nubia_camera">The system is being used in the Nubia camera, please turn off the camera sound on the Nubia camera settings</string>
    <string name="power_sound_title">Power Sound</string>
    <string name="power_sound_summary_off">Off</string>
    <string name="power_sound_summary_on">On</string>
    <string name="sounds">Sounds</string>
    <string name="screenshot_sound_summary_off">Screenshot Sound Off!</string>
    <string name="screenshot_sound_summary_on">Screenshot Sound On!</string>
    <string name="screenshot_sound_title">Screenshot Sound</string>

<!--GaHoKwan ADD-->

    <!--DeviceSettings-->
    <string name="gestures">Gesture</string>
    <string name="key">Button</string>
    <string name="screen">Screen</string>
    <string name="tweak">Tweaks</string>
    <string name="others">Others</string>

    <!--MIPOP-->
    <string name="mipop">Vitrual Key</string>

    <!--CABC-->
    <string name="cabc_title_head">CABC</string>
    <string name="cabc_summary_head">Enable content adaptive backlight control</string>

    <!--mDNle-->
    <string name="mdnie_mode_summary_head">Set the mDNIe Mode</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe Scenario</string>
    <string name="mdnie_outdoor_title_head">Outdoor Mode</string>
    <string name="mdnie_outdoor_summary_head">Enable/Disable outdoor mode</string>

    <!--Vibrator-->
    <string name="defaults_button">Reset to default</string>
    <string name="intensity_default_value">50</string>
    <string name="intensity_max_value">100</string>
    <string name="intensity_min_value">0</string>
    <string name="intensity_warning_threshold">75</string>
    <string name="vibrator_sysfs_file">/sys/class/timed_output/vibrator/pwm_value</string>
    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>

    <!--Wakeup Mode-->
    <string name="wakeup_mode">Screen Wakeup</string>
    <string name="wakeup_mode_summary_0">Current: Disable</string>
    <string name="wakeup_mode_summary_1">Current: Swipe</string>
    <string name="wakeup_mode_summary_2">Current: Swipe (When Charging)</string>
    <string name="wakeup_mode_summary_3">Current: Double Tap</string>
    <string name="wakeup_mode_summary_4">Current: Double Tap (When Charging)</string>
    <string name="wakeup_mode_summary_5">Current: Both</string>
    <string name="wakeup_mode_summary_6">Current: Both (When Charging)</string>

    <!--LED Intensity-->
    <string name="led_intensity">LED Brightness</string>
    <string name="led_intensity_summary_0">Current: 40</string>
    <string name="led_intensity_summary_1">Current: 30</string>
    <string name="led_intensity_summary_2">Current: 20</string>
    <string name="led_intensity_summary_3">Current: 10</string>
    <string name="led_intensity_summary_4">Current: 5</string>
    <string name="led_intensity_summary_5">Current: 1</string>

    <!--LED Fade-->
    <string name="led_fade">Fade Notification LED</string>
    <string name="led_fade_on_summary_head">Current: Fading</string>
    <string name="led_fade_off_summary_head">Current: Blinking</string>

    <!--KCAL Color-->
    <string name="kcal_title_head">Eyes Protector</string>
    <string name="kcal_summary_0">Current: Normal</string>
    <string name="kcal_summary_1">Current: Level 1</string>
    <string name="kcal_summary_2">Current: Level 2</string>
    <string name="kcal_summary_3">Current: Level 3</string>
    <string name="kcal_summary_4">Current: Level 4</string>

    <!--KCAL Sat-->
    <string name="kcal_sat_title_head">Screen Display Mode</string>
    <string name="kcal_sat_summary_0">Current: Normal Mode</string>
    <string name="kcal_sat_summary_1">Current: Grey Scale Mode</string>
    <string name="kcal_sat_summary_2">Current: Gorgeous Mode</string>
    <string name="kcal_invert_title_head">Color Invert</string>

    <!--GLove Mode-->
    <string name="glove_mode_title_head">GLove Mode</string>
    <string name="glove_mode_summary_head">Set High Touch Sensitivity</string>

    <!--Fast Charging-->
    <string name="charge">Fast Charging</string>
    <string name="charge_warning_dialog_message">Too high charge rates, ignoring unstable power and safety margins can damage your charger or your USB host device. Use with care!</string>

    <!--Running Mode-->
    <string name="running_mode">Running Mode</string>
    <string name="running_mode_summary_battery">Current: Battery Save</string>
    <string name="running_mode_summary_standard">Current: Standard</string>
    <string name="running_mode_summary_performance">Current: Performance</string>
    <string name="performance_warning_dialog_message">Performance may cause too high temperature,it may damage your device. Use with care!</string>

    <!--KeyLight-->
    <string name="keylight_title_head">Button Backlight Mode</string>
    <string name="keylight_summary_0">Current: Disable</string>
    <string name="keylight_summary_1">Current: Touch LED when touch screen</string>
    <string name="keylight_summary_2">Current: Touch LED when touch key</string>

    <!--KeyLight Timeout-->
    <string name="keylight_timeout_title_head">Button Backlight Duration</string>
    <string name="keylight_timeout_summary_0">1 Second</string>
    <string name="keylight_timeout_summary_1">5 Second</string>
    <string name="keylight_timeout_summary_2">10 Second</string>
    <string name="keylight_timeout_summary_3">20 Second</string>
    <string name="keylight_timeout_summary_4">Always on</string>

    <!--Updater-->
    <string name="updater_notice_title">NOTICE</string>
    <string name="updater_notice_message">Default Folder is Download!</string>
    <string name="updater_check">Check Updates</string>
    <string name="updater_check_summary">Check OTA Updates</string>
    <string name="updater_flash">Flash Downloaded OTA</string>
    <string name="updater_flash_summary">Choose Flash OTA File</string>
    <string name="updater_choose_abort">Please Choose ZIP file!</string>
    <string name="updater_ok">Okay,Continue!</string>
<!--GaHoKwan END-->
</resources>
